/Client -Fix -Style: Item Detail Button size Improved, Item in Wishlist - buttons not showing correctly fixed

--- a/Server/client/src/components/Carouseltem/style.css
+++ b/Server/client/src/components/Carouseltem/style.css
@@ -1,7 +1,7 @@
 .collection__item {
   width: 272px;
   height: 429px;
-  margin: 0 0 37px 23.5px;
+  margin: 0 0 30px 23.5px;
   position: relative;
 }
 .animate {
@@ -46,9 +46,13 @@
   opacity: 0;
   transition: all 0.3s ease-in-out;
 }
-
+.collection__item-btn-container {
+  width: 100%;
+  display:flex;
+  justify-content: space-between;
+}
 .collection__item-photo-container-options-btn {
-  width: 120px;
+  width: 100%;
   height: 42px;
   background-color: black;
   color: #ffffff;
@@ -74,14 +78,14 @@
   filter: brightness(92%);
 }
 .-options-btn-white {
+  width: 47%;
   background-color: white;
   color: #828282;
   border: 2px solid #c4c4c4;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
-
+.collection__item-link-container {
+  width: 47%
+}
 .-options-btn-white:hover {
   color: #3f3f3f;
   border: 2px solid #828282;
@@ -131,15 +135,23 @@
   font-size: 17.5px;
   line-height: 26px;
   display: flex;
-  margin: 0;
+  margin: 0 0 15px 0;
 }
 .collection__link-container {
   display: none;
 }
-
+.collection__btn {
+display: none;
+}
+.collection__item-wishlist:hover .collection__item-photo-container-options{
+  display:none;
+}
+.collection__item-wishlist {
+  height: auto;
+}
 @media screen and (max-width: 768px) {
   .collection__item-wishlist {
-    margin: 0 auto;
+    margin: 0 auto 30px auto;
   }
 }
 @media screen and (max-width: 480px) {
@@ -180,7 +192,6 @@
   }
   .collection__item-price {
     font-size: 21px;
-    margin-bottom: 15px;
   }
   .collection__item {
     margin: 0 0 0 23.5px;
@@ -202,6 +213,7 @@
   }
 
   .collection__btn {
+    display: inline-block;
     position: absolute;
     top: 0px;
     right: 0;
